<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="filesystemIntentAction">com.yf.filesystem.FILESYSTEM</string>
    <string name="app_name">A-M</string>
    <string name="ieditor">.IEditor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">查找</string>
    <string name="newDir">新建文件夹</string>
     <string name="mkDirHint">输入要创建的文件夹名称</string>
    <string name="md5sum">md5摘要</string>
     <string name="searchScope">查找范围：</string>
    <string name="mark">已标记</string>
    <string name="settings">设置</string>
      <string name="find">发现</string>
    <string name="sort">排序</string>
    <string name="screen">筛选</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="more">更多</string>
    <string name="coming">coming soon</string>
    <string name="modifyAccessKey">修改密码</string>
    <string name="edit">编辑</string>
     <string name="save">保存</string>
     <string name="saveas">另存为</string>
    <string name="textsize">字体大小</string>
        <string name="pagesize">每页字节数</string>
    <string name="kb_4">4 KB</string>
    <string name="kb_8">8 KB</string>
    <string name="kb_16">16 KB</string>
    <string name="textsize_l">大</string>
    <string name="textsize_m">正常</string>
    <string name="textsize_s">小</string>
    <string name="share">分享</string>
    <string name="view">查看</string>
    <string name="decoding">解码方式</string>
     <string name="utf8">UTF-8</string>
      <string name="gbk">GBK</string>
       <string name="hextext">纯字节码</string>
    <string name="shareTo">分享到</string>
    <string name="importEntries">导入条目</string>
    <string name="exportEntries">导出条目</string>
    <string name="mkdir">创建文件夹</string>
    <string name="localService">本机服务</string>
    <string name="fileSystem">文件系统</string>
    <string name="deleteFileNotice">确定删除文件 %s ？</string>
    <string name="deleteDirNotice">确定删除文件夹 %s 及其下的所有文件？</string>
    <string name="multiDeleteNotice">正在删除文件 。。 。</string>
    <string name="multiDeleteNotice2">正在删除文件 ，忽略 %s 个无法删除的文件(夹)</string>
    <string name="contacts">联系人</string>
    <string name="confirm">确 定</string>
    <string name="fileOnly">只显示文件</string>
    <string name="dirOnly">只显示文件夹</string>
    <string name="systemOnly">只显示系统文件</string>
    <string name="writeableOnly">只显示可写入</string>
    <string name="filetype">类型：</string>
    <string name="filelocation">位置：</string>
    <string name="filesize">大小：</string>
    <string name="modifytime">修改时间：</string>
    <string name="properties">属性：</string>
    <string name="apply">应 用</string>
    <string name="done">完    成</string>
    <string name="readable">可读取</string>
    <string name="writeable">可写入</string>
    <string name="executable">可执行</string>
    <string name="filename">文件名</string>
    <string name="empty"></string>
    <string name="enableAccessKey">启用访问验证</string>
    <string name="disableAccessKey">取消访问验证</string>
    <string name="paste">粘贴</string>
    <string name="remove">移除</string>
    <string name="overlay">覆盖</string>
    <string name="retain">保留</string>
    <string name="skip">跳过</string>
    <string name="cancel">取消</string>
    <string name="byNameAsc">名字 ↑</string>
    <string name="byNameDesc">名字↓</string>
    <string name="bySizeAsc">大小↑</string>
    <string name="bySizeDesc">大小↓</string>
    <string name="byTimeAsc">修改日期↑</string>
    <string name="byTimeDesc">修改日期↓</string>
    <string name="allfile">全部</string>
    <string name="onlyfile">文件</string>
    <string name="onlydirectory">文件夹</string>
    <string name="onlysystemfile">系统文件</string>
    <string name="onlywriteablefile">writeable</string>
    
    
     <string name="advanced">高级</string>
      <string name="startSearch">立即搜索</string>
      <string name="cease">终  止</string>
    
    <string name="byGroup">按分组搜索</string>
    <string name="byName">按名字搜索</string>
    
    <string name="byPhone">按手机搜索</string>
    <string name="byTel">按电话搜索</string>
    <string name="byEmail">按电子邮箱</string>
    <string name="byChatAccount">按聊天账户</string>
<string name="replace_">替换：</string>
<string name="replace">替换</string>
<string name="find_">查找：</string>
<string name="replaceAll">全部替换</string>
<string name="caseSensitive">大小写敏感</string>
<string name="wrapSearch">循环查找</string>
<string name="reverse">反向查找</string>
<string name="openas">打开方式</string>
<string name="chooseActivity">选择打开程序 ( %s )</string>
<string name="shareSthTo">将 %s 分享到>></string>
<string name="searchKeyword">关键字</string>
<string name="keyWord">关键字:</string>
<string name="keyWordHint">文件名称中包含的</string>
<string name="suffix_">后缀名:</string>
<string name="extension_">扩展名:</string>
<string name="suffix_hint">多个扩展名之间以英文逗号隔开 </string>
<string name="noSuffix">无后缀</string>
<string name="docsFile">文本-></string>
<string name="docsSuffix">txt,xml,html,xhtml,doc,docx,xls,xlsx,ppt,pptx,pdf</string>
<string name="imgFile">图片-></string>
<string name="imgSuffix">jpg,jpeg,gif,png,bmp,wbmp</string>
<string name="videoFile">视频-></string>
<string name="videoSuffix">mpeg,mp4,mov,avi,divx,wmv,m4v,3gp,3gpp,3g2,3gpp2,asf,flv,mkv,mpg,rmvb,rm,vob,f4v</string>
<string name="audioFile">音频-></string>
<string name="audioSuffix">mp3,m4a,wav,amr,awb,aac,flac,mid,midi,xmf,rttt1,rtx,ota,wma,ra,mka,m3u,pls</string>
<string name="compressedFile">压缩文件-></string>
<string name="compresssionSuffix">xzip,zip,rar,gzip,bzip2,tar,jar</string>
<string name="installationFile">安装文件-></string>
<string name="installationSuffix">apk</string>





<string name="advanced_">高级选项>></string>
<string name="regularExpression">使用正则表达式</string>
<string name="searchOptions">搜索选项>></string>
<string name="editRETemplate">编辑模板</string>
<string name="editRETemplateDetail">编辑正则表达式模板</string>
<string name="closeRETemplate">关闭模板</string>
<string name="basicSetting">基本设置>></string>
<string name="searchType">查找类型>></string>
<string name="file">文件</string>
<string name="directory">文件夹</string>
<string name="systemFile">系统文件</string>
<string name="more_">更多>></string>
<string name="fileSizeBetween">文件大小</string>
<string name="modifyTimeBetween">修改时间至当前时间</string>
<string name="greatThan">大于:</string>
<string name="lessThan">小于:</string>
<string name="B">B</string>
<string name="KB">KB</string>
<string name="MB">MB</string>
<string name="GB">GB</string>
<string name="hour">时</string>
<string name="day">天</string>
<string name="month">月</string>
<string name="year">年</string>



<string name="gridcolumn">显示列数>></string>
<string name="maxiumFileSearchResultCount">搜索最大结果数>></string>
<string name="plus_">+\n</string>
<string name="minus_">-\n</string>

<string-array name="sizeAry">
    <item >B</item>
     <item >KB</item>
      <item >MB</item>
       <item >GB</item>
</string-array>
<string-array name="dateAry">
    <item >时</item>
     <item >天</item>
      <item >月</item>
       <item >年</item>
</string-array>


<string-array name="openaslist1">
    <item >文本文件</item>
     <item >图片文件</item>
      <item >视频文件</item>
       <item >音频文件</item>
        <item >安装文件</item>
        <item >inflate</item>
</string-array>
<string-array name="openaslist2">
    <item >文本文件</item>
     <item >图片文件</item>
      <item >视频文件</item>
       <item >音频文件</item>
        <item >安装文件</item>
</string-array>
</resources>