<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="3dp"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/rlRimEditTextStyle01"
        android:layout_height="30dp"
        android:layout_marginBottom="2dp" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:gravity="center_vertical"
            android:text="@string/find_" />

 <ImageButton
     android:id="@+id/dropdown"
     style="@style/rightcircle_button_style"
     android:layout_width="70dp"
     android:layout_height="match_parent"
     android:layout_alignParentRight="true"
     android:layout_centerVertical="true"
     android:src="@drawable/rotate_scrollup" />

            <EditText
                android:id="@+id/findField"
                style="@style/registerEditTextStyle"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/dropdown"
                android:layout_toRightOf="@id/tv1" />

            <Button
                android:id="@+id/findFieldDisposer"
                style="@style/textDisposerStyle"
                android:layout_height="match_parent"
                android:layout_alignRight="@id/findField" />

        </RelativeLayout>
        <LinearLayout  android:id="@+id/findOptions"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

      <RelativeLayout
          style="@style/rlRimEditTextStyle01"
          android:layout_height="30dp" android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:gravity="center_vertical"
            android:text="@string/replace_" />
        
         <Button
             android:id="@+id/replaceAll"
             android:layout_width="70dp"
             android:layout_height="28dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/selector_lightblue_button"
             android:text="@string/replaceAll"
             android:textColor="#555"
             android:textSize="@dimen/font_size_s" />

  <EditText
      android:id="@+id/replaceField"
      style="@style/registerEditTextStyle"
      android:layout_height="match_parent"
      android:layout_toLeftOf="@id/replaceAll"
      android:layout_toRightOf="@id/tv2" />

   <Button
       android:id="@+id/replaceFieldDisposer"
       style="@style/textDisposerStyle"
       android:layout_height="match_parent"
       android:layout_alignRight="@id/replaceField" />

  </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/shape_radius_strike"
                android:orientation="vertical"
                android:paddingLeft="9dp"
                android:paddingTop="2dp" >

                <CheckedTextView
      android:id="@+id/caseSensitive"
      android:text="@string/caseSensitive"
       style="@style/checkableTextStyle02"/>

                <CheckedTextView
      android:id="@+id/wrapSearch"
      android:text="@string/wrapSearch"
      style="@style/checkableTextStyle02"
     />
                 <CheckedTextView
      android:id="@+id/reverse"
      android:text="@string/reverse"
      style="@style/checkableTextStyle02"/>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/replace"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/selector_lightblue_button"
                    android:text="@string/replace"
                    android:textColor="#444"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/find"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:background="@drawable/selector_deepblue_button"
                    android:text="@string/search"
                    android:textColor="#fff"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

      </LinearLayout>

</LinearLayout>